--- a/src/index.scss
+++ b/src/index.scss
@@ -2025,7 +2025,7 @@ button {
       form {
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
+        gap: 2rem;
       }
       &-heading {
         margin-bottom: 3rem;
@@ -2033,10 +2033,30 @@ button {
 
       .SecondaryBtn {
         border-radius: 8px;
-        margin-top: .5rem;
+        margin-top: 0.5rem;
         span {
           font-size: var(--fs-16);
           padding: 0.5rem 2rem;
+        }
+      }
+
+      .inputBoxSelect {
+        display: flex;
+        flex-direction: column;
+        // gap: 1rem;
+
+        label {
+          text-transform: uppercase;
+          color: var(--gray);
+          font-size: var(--fs-14);
+          margin-bottom: 1rem;
+        }
+
+        select {
+          background-color: var(--black);
+          padding: 1rem;
+          border-radius: 0.5rem;
+          font-size: var(--fs-16);
         }
       }
 
@@ -2048,6 +2068,12 @@ button {
         row-gap: 1rem;
         span {
           font-size: var(--fs-18);
+        }
+
+        .info {
+          span {
+            font-size: var(--fs-14) !important;
+          }
         }
 
         label {
@@ -2098,6 +2124,19 @@ button {
         }
       }
 
+      .info {
+        text-transform: capitalize;
+        font-size: var(--fs-15);
+        color: var(--gray);
+        padding-left: 0.5 rem;
+        padding-left: 0.5rem;
+        padding-top: 0.5rem;
+      }
+
+      .info.red {
+        color: var(--red);
+      }
+
       .inputBox {
         position: relative;
         #email,
@@ -2106,21 +2145,6 @@ button {
         }
         #name {
           text-transform: capitalize;
-        }
-        .info {
-          // position: absolute;
-          // bottom: -1.5rem;
-          // left: 0;
-          font-size: var(--fs-14);
-          color: var(--gray);
-          padding-left: 0.5 rem;
-          // border: 2px solid red;
-          padding-left: 0.5rem;
-          padding-top: 0.5rem;
-        }
-
-        .info.red {
-          color: var(--red);
         }
 
         input {
@@ -2166,5 +2190,16 @@ button {
         }
       }
     }
+  }
+}
+
+select {
+  font-family: "GoogleSansRegular";
+  outline: none;
+  // border: none;
+  border: 2px solid var(--border);
+  option {
+    font-family: "GoogleSansRegular";
+    color: var(--gray);
   }
 }
