--- a/src/index.scss
+++ b/src/index.scss
@@ -633,6 +633,7 @@ button {
           gap: 1rem;
           text-transform: capitalize;
           font-size: var(--fs-16);
+          font-weight: normal;
 
           .active {
             position: relative;
@@ -761,9 +762,9 @@ button {
     width: 200px;
     aspect-ratio: 1;
     border-radius: 50%;
-    filter: blur(2000px);
+    filter: blur(500px);
     position: absolute;
-    opacity: 0.3;
+    opacity: 0.4;
 
     &:nth-child(1) {
       top: random(100) + vh;
@@ -1663,6 +1664,7 @@ button {
   display: grid;
   place-content: center;
   backdrop-filter: blur(15px);
+  padding-inline: 2rem;
 
   &-container {
     background-color: var(--black);
@@ -1706,11 +1708,35 @@ button {
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 1.5rem;
+      gap: 2rem;
       flex-direction: column;
       text-align: center;
       h3 {
-        margin-bottom: 2rem;
+        font-size: var(--fs-21);
+        line-height: 1.7;
+        max-width: 500px;
+      }
+
+      .btnGroups {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1rem;
+      }
+
+      .SecondaryBtn-2 {
+        background-color: transparent;
+        color: var(--light);
+        transition: all 0.3s cubic-bezier(0.18, 0.37, 0.42, 1.01);
+
+        &:hover,
+        &:focus {
+          border: 1px solid var(--red) !important;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px,
+            var(--red) 0px 0px 0px 3px;
+          color: var(--red);
+          background-color: #ff514518;
+        }
       }
     }
   }
@@ -1934,6 +1960,209 @@ button {
   padding: 1rem;
 }
 
+.cursor {
+  &-pointer {
+    cursor: pointer !important;
+    opacity: 1;
+  }
+
+  &-disabled {
+    opacity: 0.5;
+    cursor: not-allowed !important;
+  }
+}
+
+.LoginModal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-block: 4rem;
+
+  @include breakpoints(smMax) {
+    padding-inline: 1rem !important;
+    &-container {
+      padding-inline: 2rem !important;
+    }
+  }
+
+  &-container {
+    max-width: 500px;
+    height: max-content;
+    max-height: max-content;
+
+    @include breakpoints(lg) {
+      min-width: 500px !important;
+    }
+
+    .password {
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 0.6rem;
+      .forgot {
+        // border: 2px solid red;
+        align-self: flex-end;
+        text-decoration: underline;
+        color: var(--blue);
+        font-size: var(--fs-16);
+      }
+    }
+  }
+
+  .LoginFooter {
+    text-align: center;
+    margin-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
+    font-size: var(--fs-18);
+
+    a {
+      color: var(--blue);
+      text-decoration: underline;
+    }
+  }
+
+  .formBox {
+    margin-block: 2.5rem;
+
+    max-width: 600px;
+
+    .info {
+      text-transform: capitalize;
+      font-size: var(--fs-12);
+      color: var(--gray);
+      padding-left: 0.5 rem;
+      padding-left: 0.5rem;
+      padding-top: 0.5rem;
+    }
+
+    .info.red {
+      color: var(--red);
+    }
+
+    form {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1.8rem;
+    }
+
+    button {
+      background-color: var(--light);
+      color: var(--black);
+      // width: max-content;
+      height: 50px;
+      position: relative;
+      padding: 0.8rem 2rem;
+      border-radius: 15px;
+      overflow: hidden;
+      transition: all 0.3s cubic-bezier(0.18, 0.37, 0.42, 1.01);
+      border: 3px solid var(--border);
+
+      span {
+        font-size: var(--fs-16);
+        position: relative;
+      }
+
+      &:hover,
+      &:focus {
+        border: 3px solid var(--black) !important;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, var(--blue) 0px 0px 0px 3px;
+      }
+
+      @include breakpoints(mdMax) {
+        padding: 1.2rem 2rem;
+        span {
+          font-size: var(--fs-18) !important;
+        }
+      }
+
+      @include breakpoints(smMax) {
+        padding: 1.2rem 2rem !important;
+      }
+      @include breakpoints(lgMax) {
+        padding: 1rem 2rem;
+      }
+    }
+
+    .inputBox {
+      width: 100%;
+      position: relative;
+      #email {
+        text-transform: lowercase;
+      }
+
+      .ico {
+        font-size: var(--fs-24);
+        color: var(--gray);
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        scale: 0;
+        transition: all 0.3s cubic-bezier(0.18, 0.37, 0.42, 1.01);
+        cursor: pointer;
+      }
+
+      input {
+        background-color: transparent;
+        width: 100%;
+        border: 2px solid #8f8f8f2d;
+        border-radius: 8px;
+        padding: 1rem;
+        outline: none;
+        color: var(--white);
+        font-family: var(--fontS);
+        font-size: var(--fs-16);
+        position: relative;
+        text-transform: capitalize;
+
+        &:valid,
+        &:focus {
+          border: 1px solid var(--blue);
+        }
+
+        &:valid ~ .ico,
+        &:focus ~ .ico {
+          scale: 1;
+        }
+
+        &:valid ~ .label,
+        &:focus ~ .label {
+          color: var(--blue);
+          translate: 20px -0.8rem;
+          font-size: var(--fs-14);
+          padding: 0 10px;
+          background-color: var(--black);
+          border-left: 2px solid var(--blue);
+          border-right: 2px solid var(--blue);
+        }
+      }
+
+      .label {
+        position: absolute;
+        top: 0.1rem;
+        left: 0;
+        padding: 1rem;
+        pointer-events: none;
+        font-size: var(--fs-16);
+        color: var(--gray);
+        text-transform: uppercase;
+        transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      }
+    }
+  }
+
+  .LoginModalHeading {
+    .SectionHeadingText {
+      h2 {
+        font-size: var(--fs-32);
+      }
+    }
+  }
+}
+
 .Register {
   padding-top: 1rem;
   width: 100%;
@@ -2147,6 +2376,17 @@ button {
           text-transform: capitalize;
         }
 
+        .ico {
+          font-size: var(--fs-24);
+          color: var(--gray);
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+          scale: 0;
+          transition: all 0.3s cubic-bezier(0.18, 0.37, 0.42, 1.01);
+          cursor: pointer;
+        }
+
         input {
           background-color: transparent;
           width: 100%;
@@ -2163,6 +2403,11 @@ button {
           &:valid,
           &:focus {
             border: 1px solid var(--blue);
+          }
+
+          &:valid ~ .ico,
+          &:focus ~ .ico {
+            scale: 1;
           }
 
           &:valid ~ .label,
