--- a/src/index.scss
+++ b/src/index.scss
@@ -2469,7 +2469,7 @@ select {
     filter: grayscale(1);
     position: relative;
     z-index: -1;
-    opacity: 0.1;
+    opacity: 0.4;
   }
 
   &-container {
@@ -2662,6 +2662,84 @@ select {
       color: var(--gray);
       text-transform: uppercase;
       transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+  }
+}
+
+#Speakers {
+  &-container {
+
+    margin-block: 6rem;
+
+    #callForSpeakers {
+      background-color: var(--black);
+      border-radius: 1rem;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      border-bottom: 2px solid var(--red);
+      border-right: 2px solid var(--blue);
+      border-top: 2px solid var(--green);
+      border-left: 2px solid var(--yellow);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    @include breakpoints(lgMax){
+      grid-template-columns: 1fr;
+
+      &-image{
+        margin-top: -2rem;
+      }
+    }
+
+      
+      &-image{
+        width: 100%;
+        height: 100%;
+        max-width: 800px;
+        img{
+          object-fit: cover;
+        }
+      }
+      
+      &-text{
+        align-self: center;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        flex-shrink: 0;
+        
+        
+        .SecondaryBtn{
+          margin-top: 1.5rem;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+
+    &-heading {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    &-lists {
+      margin-top: 3rem;
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 2rem;
+
+      @include breakpoints(sm) {
+        grid-template-columns: 1fr 1fr;
+      }
+
+      @include breakpoints(lg) {
+        grid-template-columns: 1fr 1fr 1fr;
+      }
+      @media (min-width: 1200px) {
+        grid-template-columns: 1fr 1fr;
+      }
     }
   }
 }
