--- a/src/index.scss
+++ b/src/index.scss
@@ -2253,13 +2253,24 @@ button {
     padding: 2rem;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     #formBox {
+      margin-bottom: 2rem;
       form {
         display: flex;
         flex-direction: column;
         gap: 2rem;
       }
       &-heading {
-        margin-bottom: 3rem;
+        margin-bottom: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        span {
+          font-size: var(--fs-16);
+          button {
+            background-color: transparent;
+            font-size: var(--fs-16);
+          }
+        }
       }
 
       .SecondaryBtn {
@@ -2474,7 +2485,8 @@ select {
 
   &-container {
     // border: 2px solid red;
-    max-width: max-content;
+    width: 100%;
+    max-width: 600px;
     position: absolute;
     top: 45%;
     left: 50%;
@@ -2484,6 +2496,7 @@ select {
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    padding-inline: 2rem;
     p {
       text-align: center;
       color: var(--white);
@@ -2668,7 +2681,6 @@ select {
 
 #Speakers {
   &-container {
-
     margin-block: 6rem;
 
     #callForSpeakers {
@@ -2679,37 +2691,35 @@ select {
       border-right: 2px solid var(--blue);
       border-top: 2px solid var(--green);
       border-left: 2px solid var(--yellow);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
 
-    @include breakpoints(lgMax){
-      grid-template-columns: 1fr;
+      @include breakpoints(lgMax) {
+        grid-template-columns: 1fr;
 
-      &-image{
-        margin-top: -2rem;
+        &-image {
+          margin-top: -2rem;
+        }
       }
-    }
 
-      
-      &-image{
+      &-image {
         width: 100%;
         height: 100%;
         max-width: 800px;
-        img{
+        img {
           object-fit: cover;
         }
       }
-      
-      &-text{
+
+      &-text {
         align-self: center;
         padding: 2rem;
         display: flex;
         flex-direction: column;
         gap: 1rem;
         flex-shrink: 0;
-        
-        
-        .SecondaryBtn{
+
+        .SecondaryBtn {
           margin-top: 1.5rem;
           display: flex;
           align-items: center;
@@ -2742,4 +2752,264 @@ select {
       }
     }
   }
+}
+
+// Schedule
+
+#Schedule {
+}
+
+// Sponsorship
+
+#Sponsorship {
+}
+
+// tickets
+
+#Tickets {
+  &-container {
+    margin-block: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-bottom: 6rem;
+
+    &-heading {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      gap: 2rem;
+      row-gap: 1rem;
+      flex-wrap: wrap;
+      align-items: center;
+
+      .SectionHeadingText {
+        max-width: max-content;
+      }
+
+      p {
+        max-width: 700px;
+      }
+    }
+  }
+}
+
+.StudentTicket,
+.ProfessionalTicket {
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-bottom: 2px solid var(--red);
+  border-right: 2px solid var(--blue);
+  border-top: 2px solid var(--green);
+  border-left: 2px solid var(--yellow);
+  background-color: var(--black);
+  background-image: url(/assets/overlayBG.webp);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
+
+  &-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+
+    p {
+      font-weight: normal !important;
+    }
+
+    &-info {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+      background-color: var(--black);
+      padding: 2rem;
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    &-text {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      &-heading {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        p {
+          max-width: 350px;
+        }
+      }
+
+      &-btn {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 1rem;
+        align-items: center;
+
+        .stock {
+          h3 {
+            font-size: var(--fs-21);
+            color: var(--yellow);
+            span {
+              font-size: var(--fs-16);
+              color: var(--gray);
+            }
+          }
+        }
+      }
+
+      &-btn.outOfStock {
+        display: flex;
+        flex-direction: column;
+        max-width: 300px;
+        align-items: flex-start !important;
+        cursor: not-allowed;
+        a {
+          opacity: 0.5;
+        }
+        & > * {
+          cursor: not-allowed !important;
+        }
+        p {
+          color: var(--gray);
+          margin-top: 0.5rem;
+          font-size: var(--fs-12) !important;
+        }
+      }
+    }
+
+    &-benefits {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+
+      h4 {
+        font-weight: normal;
+        position: relative;
+        &::after {
+          content: "";
+          position: absolute;
+          top: 50%;
+          right: -0.5rem;
+          width: calc(100% - 6rem);
+          height: 2px;
+          background-color: var(--border);
+          opacity: 0.5;
+        }
+      }
+
+      &-list {
+        padding-inline: 0.5rem;
+        ul {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 0.8rem;
+          column-gap: 1rem;
+          li {
+            display: flex;
+            flex-direction: row;
+            gap: 0.5rem;
+            font-size: var(--fs-15);
+
+            .ico {
+              color: var(--yellow);
+              margin-top: 4px;
+            }
+
+            span {
+              font-weight: normal;
+              line-height: 1.5;
+              color: var(--gray);
+            }
+          }
+        }
+      }
+    }
+
+    &-image {
+      // border: 2px solid red;
+      width: 100%;
+      height: 100%;
+      max-width: 700px;
+      padding: 1rem;
+
+      img {
+        object-fit: contain;
+      }
+    }
+  }
+
+  @include breakpoints(lgMax) {
+    &-container {
+      grid-template-columns: 1fr;
+      gap: 1rem;
+      &-text {
+        text-align: center;
+
+        &-heading {
+          h3 {
+            margin-inline: auto;
+            font-size: var(--fs-32);
+          }
+          p {
+            margin-inline: auto;
+          }
+        }
+
+        &-price {
+          margin-inline: auto;
+        }
+
+        &-btn {
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+        }
+
+        &-btn.outOfStock {
+          margin-inline: auto;
+          p {
+            font-size: var(--fs-16) !important;
+          }
+        }
+      }
+
+      &-image {
+        max-width: 100%;
+        max-height: 400px;
+      }
+    }
+  }
+
+  @include breakpoints(mdMax) {
+    &-container {
+      &-benefits {
+        &-list {
+          padding-inline: 0 !important;
+        }
+      }
+    }
+  }
+  @include breakpoints(smMax) {
+    &-container {
+      &-benefits {
+        &-list {
+          padding-inline: 0 !important;
+          ul {
+            grid-template-columns: 1fr;
+            li {
+              span {
+                font-size: var(--fs-16) !important;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+li {
+  list-style: none;
 }
