--- a/src/index.scss
+++ b/src/index.scss
@@ -2538,6 +2538,34 @@ select {
       display: flex;
       flex-direction: column;
       gap: 1rem;
+
+      &-info {
+        margin-top: 2rem;
+        ul {
+          display: flex;
+          flex-direction: column;
+          gap: 1rem;
+
+          li {
+            display: flex;
+            flex-direction: row;
+            gap: 0.5rem;
+            align-items: center;
+            font-size: var(--fs-18);
+            font-family: var(--fontS);
+            .ico {
+              width: 30px;
+              aspect-ratio: 1;
+              background-color: var(--blue);
+              font-size: var(--fs-18);
+              display: grid;
+              place-content: center;
+              color: var(--white);
+              border-radius: 50%;
+            }
+          }
+        }
+      }
     }
 
     form {
@@ -3325,6 +3353,89 @@ li {
     .SectionHeadingText {
       h2 {
         font-size: var(--fs-32);
+      }
+    }
+  }
+}
+
+#TermsAndCondition {
+}
+
+.policy {
+  margin-top: 8rem;
+  margin-bottom: 3rem;
+
+  .Wrapper {
+    max-width: 1000px;
+  }
+  &-container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    &-row {
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
+
+      h2 {
+        max-width: 1000px;
+        margin-bottom: 4rem;
+      }
+
+      h4 {
+        font-size: var(--fs-24);
+        font-weight: normal;
+        position: relative;
+        max-width: max-content;
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -1rem;
+          left: 0;
+          width: 100%;
+          height: 3px;
+          border-radius: 1rem;
+          background-color: var(--yellow);
+        }
+      }
+
+      a {
+        text-decoration: underline;
+        margin-inline: 6px;
+        color: var(--blue);
+      }
+
+      p {
+        max-width: 1000px;
+        font-size: var(--fs-18) !important;
+        @include breakpoints(lg) {
+          font-size: var(--fs-16) !important;
+        }
+      }
+
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        margin-left: 3rem;
+        li {
+          font-family: var(--fontS);
+          font-weight: normal;
+          list-style-type: circle;
+          font-size: var(--fs-18) !important;
+          color: var(--gray);
+          line-height: 1.7;
+          @include breakpoints(lg) {
+            font-size: var(--fs-16) !important;
+          }
+
+          span {
+            font-weight: bold;
+            color: var(--white);
+            margin-right: 6px;
+          }
+        }
       }
     }
   }
