--- a/src/index.scss
+++ b/src/index.scss
@@ -3440,3 +3440,20 @@ li {
     }
   }
 }
+
+#CFP {
+  .Wrapper {
+    max-width: 1000px;
+  }
+  &-container {
+    margin-top: 6rem;
+    width: 100%;
+    height: 100%;
+
+    iframe{
+      width: 100%;
+      height: 100%;
+      min-height: 100dvh;
+    }
+  }
+}
