--- a/src/index.scss
+++ b/src/index.scss
@@ -374,7 +374,7 @@ button {
 
 .Error404 {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   display: grid;
   place-content: center;
@@ -546,6 +546,76 @@ button {
   -webkit-backdrop-filter: blur(20px);
   max-height: 59px;
 
+  &-right {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    flex-direction: row-reverse;
+  }
+
+  &-profile {
+    display: flex;
+    align-items: center;
+    position: relative;
+
+    &-dropdown {
+      position: absolute;
+      bottom: -8rem;
+      right: 0;
+      width: 180px;
+      background-color: var(--white);
+      color: var(--black);
+      border-radius: 0.4rem;
+
+      .dropdown {
+        display: flex;
+        flex-direction: column;
+        padding: 0.5rem;
+        &-item {
+          padding: 0.8rem;
+          transition: all 0.4s ease-in-out;
+          cursor: pointer;
+          &:hover,
+          &:focus {
+            background-color: var(--light);
+          }
+        }
+      }
+    }
+
+    &-col {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      cursor: pointer;
+
+      .ico {
+        margin-top: 6px;
+      }
+    }
+
+    &-name {
+      h5 {
+        font-weight: normal;
+        font-size: var(--fs-16);
+      }
+      margin-right: 1rem;
+      @include breakpoints(smMax) {
+        display: none;
+      }
+    }
+    &-img {
+      width: 40px;
+      aspect-ratio: 1;
+      background-color: var(--yellow);
+      border-radius: 50%;
+      display: grid;
+      place-content: center;
+      font-size: var(--fs-21);
+      border: 2px solid var(--border);
+    }
+  }
+
   @include breakpoints(sm) {
     max-height: 71px;
     padding-bottom: 0.5rem;
@@ -691,7 +761,7 @@ button {
       left: 0;
       background-color: var(--blue);
       width: 100%;
-      height: 100vh;
+      height: 100dvh;
 
       &-container {
         width: 100%;
@@ -2789,7 +2859,55 @@ select {
 
 // Sponsorship
 
+.BrochureSection {
+  background-color: var(--black);
+  border-radius: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-bottom: 2px solid var(--red);
+  border-right: 2px solid var(--blue);
+  border-top: 2px solid var(--green);
+  border-left: 2px solid var(--yellow);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  @include breakpoints(lgMax) {
+    grid-template-columns: 1fr;
+
+    &-image {
+      margin-top: -2rem;
+    }
+  }
+
+  &-image {
+    width: 100%;
+    height: 100%;
+    max-width: 800px;
+    img {
+      object-fit: cover;
+    }
+  }
+
+  &-text {
+    align-self: center;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex-shrink: 0;
+
+    .SecondaryBtn {
+      margin-top: 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
 #Sponsorship {
+  .BrochureSection {
+    margin-top: 4rem;
+  }
 }
 
 // tickets
@@ -3166,8 +3284,8 @@ li {
   width: 100%;
   height: 100%;
   &-container {
-    margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
   }
 
   #Footer {
@@ -3450,7 +3568,7 @@ li {
     width: 100%;
     height: 100%;
 
-    iframe{
+    iframe {
       width: 100%;
       height: 100%;
       min-height: 100dvh;
