--- a/src/index.scss
+++ b/src/index.scss
@@ -1731,6 +1731,8 @@ button {
   width: 100%;
   height: 100%;
   position: fixed;
+  top: 0;
+  right: 0;
   background-color: #20212463;
   z-index: 99999;
   display: grid;
@@ -3572,6 +3574,219 @@ li {
       width: 100%;
       height: 100%;
       min-height: 100dvh;
+    }
+  }
+}
+
+#CheckOut {
+  min-height: calc(100dvh - 220px);
+  &-container {
+    margin-top: 8rem;
+    display: grid;
+    grid-template-columns: 1fr 0.8fr;
+    gap: 4rem;
+    @include breakpoints(mdMax) {
+      grid-template-columns: 1fr;
+    }
+    .SectionHeadingText {
+      h2 {
+        font-size: var(--fs-32);
+      }
+    }
+
+    &-right {
+      width: 100%;
+      height: 100%;
+      &-container {
+        background-color: var(--black);
+        width: 100%;
+        height: 100%;
+        border-radius: 0.5rem;
+        border-top: 2px solid var(--red);
+        border-right: 2px solid var(--blue);
+        border-bottom: 2px solid var(--green);
+        border-left: 2px solid var(--yellow);
+        background-image: url(/assets/overlayBG.webp);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        overflow: hidden;
+        position: relative;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        padding: 1.5rem;
+        width: 100%;
+        height: 100%;
+        min-height: 500px;
+        @include breakpoints(mdMax) {
+          min-height: 400px;
+        }
+
+        &-price {
+          margin-top: 2rem;
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          height: calc(100% - (54px + 3rem));
+          justify-content: space-between;
+
+          ul {
+            li {
+              .btn {
+                width: 100%;
+              }
+            }
+            .PrimaryBtn {
+              width: 100%;
+              max-width: 100%;
+              margin-top: 2rem;
+              @include breakpoints(mdMax) {
+                margin-top: 1rem;
+              }
+
+              .text {
+                span {
+                  font-size: var(--fs-16) !important;
+                  &:nth-child(2) {
+                    font-size: var(--fs-16) !important;
+                  }
+                }
+              }
+            }
+            &:nth-child(2) {
+              padding-top: 2rem;
+              justify-self: flex-end;
+              border-top: 2px solid var(--border);
+              li {
+                font-size: var(--fs-24) !important;
+                color: var(--white);
+                span {
+                  &:nth-child(2) {
+                    font-size: var(--fs-32) !important;
+                  }
+                }
+              }
+            }
+            display: flex;
+            flex-direction: column;
+            gap: 0.8rem;
+            li {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              font-size: var(--fs-16);
+              color: var(--gray);
+              span {
+                &:nth-child(2) {
+                  font-size: var(--fs-19);
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    &-left {
+      display: flex;
+      flex-direction: column;
+      gap: 3rem;
+
+      &-paymentOptions{
+        ul{
+          margin-top: 2rem;
+          
+        }
+      }
+
+      &-details {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        &-container {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          gap: 1rem;
+          position: relative;
+          padding: 1rem;
+          .btn-groups {
+            position: absolute;
+            top: 0;
+            left: 0;
+            background-color: #20212427;
+            backdrop-filter: blur(05px);
+            width: 100%;
+            height: 100%;
+
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            div {
+              display: grid;
+              place-content: center;
+            }
+
+            .second {
+              .PrimaryBtn {
+                background-color: var(--light);
+                color: var(--black);
+              }
+            }
+          }
+          .txt {
+            font-size: var(--fs-15);
+            color: var(--gray);
+            span {
+              font-size: var(--fs-19);
+              color: var(--white);
+            }
+          }
+        }
+      }
+
+      &-summery {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
+        &-item {
+          display: flex;
+          flex-direction: row;
+          gap: 1rem;
+          align-items: center;
+          flex-wrap: wrap;
+
+          h4 {
+            font-weight: normal;
+          }
+
+          .row {
+            margin-top: 0.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+
+            color: var(--gray);
+            font-size: var(--fs-14);
+            span {
+              color: var(--white);
+              font-size: var(--fs-16);
+            }
+          }
+
+          &-image {
+            max-width: 200px;
+            @include breakpoints(lgMax) {
+              max-width: 600px;
+            }
+
+            @include breakpoints(mdMax) {
+              margin-inline: auto;
+            }
+          }
+        }
+      }
     }
   }
 }
