Backend part integration in Frontend ( User Data )

--- a/src/index.scss
+++ b/src/index.scss
@@ -4023,6 +4023,9 @@ li {
           .txt {
             font-size: var(--fs-15);
             color: var(--gray);
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
             span {
               font-size: var(--fs-19);
               color: var(--white);
