--- a/src/index.scss
+++ b/src/index.scss
@@ -208,6 +208,19 @@ button {
   cursor: pointer;
 }
 
+#tickettemplateMain {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  @include breakpoints(lg) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow-x: hidden;
+  }
+}
+
 .Loader {
   display: grid;
   place-content: center;
@@ -3122,8 +3135,6 @@ select {
 
 // Schedule
 
-
-
 // Sponsorship
 
 .SponsorshipPlansCard {
@@ -3716,8 +3727,6 @@ li {
 
 // Team
 
-
-
 // DashboardHeader
 
 #DashboardHeader {
@@ -4028,8 +4037,6 @@ li {
     }
   }
 }
-
-
 
 .policy {
   margin-top: 8rem;
