--- a/src/index.scss
+++ b/src/index.scss
@@ -853,30 +853,38 @@ button {
 // hero
 
 .EventCounter {
-  margin-bottom: 4rem;
+  margin-bottom: 8rem;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   text-align: center;
   gap: 2rem;
+  margin-inline: auto;
   @include breakpoints(mdMax) {
+    margin-inline: 0rem !important;
     gap: 1rem;
     margin-top: 4rem;
     margin-bottom: 6rem !important;
   }
 
   @include breakpoints(smMax) {
-    gap: 1rem;
-    row-gap: 2rem;
+    gap: 2rem;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     .item {
       padding: 2rem;
-      max-width: 180px;
+      max-width: 150px;
+    }
+  }
+
+  @media (max-width: 454px) {
+    .item {
+      max-width: 140px !important;
     }
   }
   .item {
     width: 100%;
+    max-width: 200px;
     display: flex;
     align-items: center;
     justify-content: center;
